--- a/lib/samplesite/themes/deic-doc/css/style.css
+++ b/lib/samplesite/themes/deic-doc/css/style.css
@@ -351,3 +351,9 @@ section#content div.inner li input[type=checkbox] {
 	right: 32px;
 }
 
+/* Prevent rotation */
+img {
+	image-orientation: from-image;
+}
+
+
