--- a/lib/samplesite/themes/deic-blog/post.twig
+++ b/lib/samplesite/themes/deic-blog/post.twig
@@ -62,6 +62,10 @@
 
 <body>
 
+	{% if meta.toc %}
+		{{ toc }}
+	{% endif %}
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
@@ -81,13 +85,6 @@
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="post-header">
-			{% if has_search_page %}
-			<div id="displayavatar">
- 				<a href="{{ base_url }}/search/author:{{ meta.author }}">
-					<div class="avatardiv" author="{{ meta.author }}"></div>
-				</a>
-			</div>
-			{% endif %}
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
@@ -105,6 +102,13 @@
 													{% endfor %}
 		                    </div>
                     		{% endif %}
+                    		{% if has_search_page %}
+													<div id="displayavatar">
+										 				<a href="{{ base_url }}/search/author:{{ meta.author }}">
+															<div class="avatardiv" author="{{ meta.author }}"></div>
+														</a>
+													</div>
+												{% endif %}
                     </div>
                 </div>
             </div>
