Avoid breaking images over pages when printing.

--- a/lib/samplesite/themes/default/style.css
+++ b/lib/samplesite/themes/default/style.css
@@ -552,7 +552,8 @@ pagebreak, .pagebreak {
 	}
 	
 	a, a:visited {
-    color: #444;
-    text-decoration: none;
+		color: #444;
+		text-decoration: none;
+	}
 }
 
