--- a/lib/samplesite/themes/deic-doc/index.twig
+++ b/lib/samplesite/themes/deic-doc/index.twig
@@ -70,10 +70,11 @@
 									{% endif %}
 									{% if meta.title == page.title %}
 										<li class="current toc{{ len }}">
+											{% if len == 2 %}
+												<a href="{{ page.url }}">{{ page.title }}</a>
+											{% endif %}
 											{% if toc %}
 												{{ toc }}
-											{% else %}
-												<a href="{{ page.url }}">{{ page.title }}</a>
 											{% endif %}
 										</li>
 									{% else %}
