--- a/lib/samplesite/themes/deic-doc/index.twig
+++ b/lib/samplesite/themes/deic-doc/index.twig
@@ -75,6 +75,8 @@
 											{% endif %}
 											{% if toc %}
 												{{ toc }}
+											{% else %}
+												<a href="{{ page.url }}">{{ page.title }}</a>
 											{% endif %}
 										</li>
 									{% else %}
