Navigation hack - needs to be looked into...

--- a/lib/samplesite/themes/deic-doc/index.twig
+++ b/lib/samplesite/themes/deic-doc/index.twig
@@ -76,7 +76,9 @@
 											{% if toc %}
 												{{ toc }}
 											{% else %}
-												<a href="{{ page.url }}">{{ page.title }}</a>
+												{% if len != 2 %}
+													<a href="{{ page.url }}">{{ page.title }}</a>
+												{% endif %}
 											{% endif %}
 										</li>
 									{% else %}
