--- a/lib/samplesite/themes/deic-doc/css/style.css
+++ b/lib/samplesite/themes/deic-doc/css/style.css
@@ -395,4 +395,12 @@ img {
   padding: 1px;
 }
 
+centerbig {
+	text-align: center;
+	font-size: 24px;
+	width: 98%;
+	position: relative;
+	margin: 0 auto;
+	display: inline-block;
+}
 
