Mores space under tables. Lighter font in tables.

--- a/lib/samplesite/themes/deic-doc/css/default_style.css
+++ b/lib/samplesite/themes/deic-doc/css/default_style.css
@@ -157,7 +157,8 @@ p {
 }
 
 table {
-	margin: 20px auto 10px auto;
+	/*margin: 20px auto 10px auto;*/
+	margin: 20px auto 20px auto;
 }
 
 ol, ul {
