--- a/lib/samplesite/themes/deic-doc/index.twig
+++ b/lib/samplesite/themes/deic-doc/index.twig
@@ -60,7 +60,7 @@
 				<div id="nav">
 					<ul>
 						{% set len = '0' %}
-						{% for folder in paged_folders|sort %}
+						{% for folder in paged_folders|sort_by("date") %}
 							{% for page in paged_pages|sort_by("date") %}
 								{% if page.folder == folder  %}
 									{% set arr = page.id|split('/') %}
