--- a/lib/samplesite/themes/deic-blog/css/clean-blog.css
+++ b/lib/samplesite/themes/deic-blog/css/clean-blog.css
@@ -389,6 +389,10 @@ article .container .row div {
     font-size: 30px;
   }
 }
+.post-preview {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
 .post-preview > a {
   color: #404040;
 }
