--- a/lib/samplesite/themes/deic-doc/css/style.css
+++ b/lib/samplesite/themes/deic-doc/css/style.css
@@ -413,3 +413,11 @@ centerbig {
 	display: inline-block;
 }
 
+@media print {
+	.navigation {
+		display: none!important;
+	}
+	.main {
+		margin-left: 4%!important;
+	}
+}
