--- a/lib/samplesite/themes/default/contents.twig
+++ b/lib/samplesite/themes/default/contents.twig
@@ -48,24 +48,20 @@
             </nav>
             {% endif %}
         </div>
-        {% if not forbidden and (meta.access == 'private' or  meta.access == 'shared') and
-        		meta.permissions != 'none' %}
+        {% if meta.editable is not empty %}
             <button class="edit-button btn btn-primary btn-flat" path="{{  oc_path }}"
             id="{{  oc_id }}" dir_id="{{  oc_parent_id }}" user="{{  oc_user }}"
             owner="{{  oc_owner }}" group="{{  oc_group }}" host="{{  oc_user_home_url }}">
             Show files</button>
         {% endif %}
     </header>
-    {% if not forbidden and (meta.access == 'private' or  meta.access == 'shared') and
-    	meta.permissions != 'none' and
-    folder!="/" and folder!="" %}
+    {% if meta.editable is not empty and folder!="/" and folder!="" %}
     	<div class="up-button btn btn-primary btn-flat">
 				<a href="../">⤴</a>
 			</div>
 		{% endif %}
 
-		{% if not forbidden and (meta.access == 'private' or  meta.access == 'shared') and
-    	meta.permissions != 'none' %}
+		{% if meta.editable is not empty %}
 			<div id="nav" class="inner">
 				<ul>
 					{% for file in contents | sort %}
