--- a/lib/samplesite/themes/deic-wiki/profile.twig
+++ b/lib/samplesite/themes/deic-wiki/profile.twig
@@ -94,8 +94,7 @@
 		</div>
 
 		<button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}"
-			{% if (meta.access != 'private' or meta.permissions == 'none') and 
-			(oc_user is not defined  or oc_owner is not defined or oc_owner != oc_user) %}
+			{% if meta.editable is empty %}
 			style="display:none;"
 			{% endif %}            dir_id="{{ oc_parent_id }}" user="{{ oc_user }}" owner="{{ oc_owner }}"
 		group="{{ oc_group }}">Show file</button>
