Match flask logo color.

--- a/lib/samplesite/themes/deic-wiki/css/clean-blog.css
+++ b/lib/samplesite/themes/deic-wiki/css/clean-blog.css
@@ -740,7 +740,7 @@ nav.navbar {
 
 .float-button {
   border-radius: 50%;
-  background-color: #1976d2;
+  background-color: #3f92c7;
   border-color: #1976d2;
   align-items: center;
   display: inline-flex;
